Fix menu spacing and featured slider pictures fade-in effect

--- a/themes/norton/inc/css/page-builder.css
+++ b/themes/norton/inc/css/page-builder.css
@@ -297,6 +297,7 @@
 .intro-block p {
     font-family: Proxima Nova Light;
     font-size: 36px;
+    line-height: 50px;
 }
 
 .marginalized {
