--- a/themes/norton/style.css
+++ b/themes/norton/style.css
@@ -1498,7 +1498,7 @@ button[type=submit],
 }
 
 #menu-homepage-menu {
-    //margin: 0 !important;
+  //  margin: 10px !important;
 
 }
 
@@ -1911,7 +1911,7 @@ h1 {
 }
 
 #menu-homepage-menu {
-    margin-top: 0 !important;
+    margin-top: 20px !important;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
@@ -2012,4 +2012,8 @@ div.project-single-picture-tile {
 
 #menu-footer-menu li > a:hover {
     text-decoration: none;
+}
+
+.rotating-leader img {
+    visibility: hidden;
 }
